[package]
name = "screeps_oxide"
version = "0.1.0"
authors = ["Ben Lichtman"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "1.0.23"
screeps-game-api = { git = "https://github.com/rustyscreeps/screeps-game-api/", branch = "bindgen" }
wasm-bindgen = { version = "0.2.70", features = ["serde-serialize"] }
web-sys = { version = "0.3.47", features = ["console"] }
js-sys = "0.3.47"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
num-traits = "0.2.14"
once_cell = "1.5.2"


[profile.release]
panic = "abort"
opt-level = "s"
lto = true
